--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Miss Bom Bom. Украшения ручной работы</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="img/diamond.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,700,700i|Open+Sans:300i,400,700,700i|Playfair+Display:400,700,700i&display=swap" rel="stylesheet">
     <meta name="viewport" comtent="width=device-width, initial=scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -25,8 +26,8 @@
                     </div>
 
                     <nav class="nav__top">
-                        <a class="nav__link" href="#">ОБО МНЕ</a>
-                        <a class="nav__link" href="#">МАГАЗИН</a>
+                        <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
+                        <a class="nav__link" href="range.html">МАГАЗИН</a>
                         <a class="nav__link" href="#">РАБОТЫ</a>
                         <a class="nav__link" href="#">МОИ МЫСЛИ</a>
                         <a class="nav__link" href="#">ДЕТАЛИ</a>
