--- a/range.html
+++ b/range.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Miss Bom Bom. Обо мне</title>
@@ -9,6 +10,7 @@
     <meta name="viewport" comtent="width=device-width, initial=scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
+
 <body>
     <header class="header_about-me">
         <div class="container">
@@ -35,8 +37,9 @@
 
     <section class="products">
         <div class="container">
-
-            
+            <div id="header"></div>
+            <div id="products"></div>
+            <div id="shopping"></div>
         </div>
     </section>
 
@@ -81,12 +84,11 @@
         </div>
 
         <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
-    </footer>
-
-    <script src="js/root.js"></script>
+    </footer>   
+    
     <script src="js/catalog.js"></script>
     <script src="js/root.js"></script>
-    <script src="LocalStorageUtil.js"></script>
+    <!-- <script src="LocalStorageUtil.js"></script> --> 
     <script src="js/header.js"></script>
     <script src="js/products.js"></script>
     <script src="js/shopping.js"></script>
