removed comments LocalStorage

--- a/range.html
+++ b/range.html
@@ -87,10 +87,10 @@
     </footer>   
     
     <script src="js/catalog.js"></script>
-    <script src="js/root.js"></script>
-    <!-- <script src="LocalStorageUtil.js"></script> --> 
-    <script src="js/header.js"></script>
+    <script src="js/root.js"></script>    
+    <script src="js/LocalStorageUtil.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
 </body>
 </html>
