add basket + script js

--- a/about_me.html
+++ b/about_me.html
@@ -24,6 +24,7 @@
                         <a class="nav__link" href="#">РАБОТЫ</a>
                         <a class="nav__link" href="#">МОИ МЫСЛИ</a>
                         <a class="nav__link" href="#">ДЕТАЛИ</a>
+                        <a class="nav__link" id="header-basket" href="#"></a>
                     </nav>
 
                 </div>
@@ -33,6 +34,7 @@
     </header> <!--/header-->
 
     <section class="about_me">
+        
         <div class="container">
 
             <div class="about_me-header">
@@ -86,6 +88,15 @@
         </div>
 
         <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
+        <div id="shopping"></div>
     </footer>
+
+    <script src="js/catalog.js"></script>
+    <script src="js/root.js"></script>    
+    <script src="js/localStorageUtil.js"></script>    
+    <script src="js/header.js"></script> 
+    <script src="js/shopping.js"></script>
+    <script src="js/products.js"></script>
+
 </body>
 </html>
