--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <a class="nav__link" href="#">РАБОТЫ</a>
                         <a class="nav__link" href="#">МОИ МЫСЛИ</a>
                         <a class="nav__link" href="#">ДЕТАЛИ</a>
+                        <a class="nav__link" id="header-basket" href="#"></a>
                     </nav>
 
                 </div>
@@ -68,7 +69,8 @@
     </section> <!--/about__us-->
 
     <section class="our_Products">
-        <div class="container">
+        <div id="shopping"></div>
+        <span class="container"></span>
             <div class="our_Products-items">
 
                 <div class="our_Products-item">
@@ -277,6 +279,12 @@
         <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
     </footer>
 
+    <script src="js/catalog.js"></script>
+    <script src="js/root.js"></script>    
+    <script src="js/localStorageUtil.js"></script>    
+    <script src="js/header.js"></script> 
+    <script src="js/shopping.js"></script>
+    <script src="js/products.js"></script>
 
 </body>
 </html>
