change catalog.js to index.js

--- a/about_me.html
+++ b/about_me.html
@@ -91,12 +91,13 @@
         <div id="shopping"></div>
     </footer>
 
-    <script src="js/catalog.js"></script>
+    <!-- <script src="js/catalog.js"></script> -->
     <script src="js/root.js"></script>    
     <script src="js/localStorageUtil.js"></script>    
     <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
