--- a/index.html
+++ b/index.html
@@ -279,12 +279,13 @@
         <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
     </footer>
 
-    <script src="js/catalog.js"></script>
+    <!-- <script src="js/catalog.js"></script> -->
     <script src="js/root.js"></script>    
     <script src="js/localStorageUtil.js"></script>    
     <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
