--- a/range.html
+++ b/range.html
@@ -35,11 +35,12 @@
         </div>
     </header> <!--/header-->
 
-    <section class="products">
+    <section>
         <div class="container">
             <div id="header"></div>
             <div id="products"></div>
             <div id="shopping"></div>
+            <div id="spinner"></div>
         </div>
     </section>
 
@@ -86,7 +87,8 @@
     <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/spinner.js"></script>   
+    <script src="js/index.js"></script>    
 
 </body>
 </html>
