page creation on error

--- a/about_me.html
+++ b/about_me.html
@@ -89,6 +89,7 @@
 
         <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
         <div id="shopping"></div>
+        <div id="spinner"></div>
     </footer>
 
     <!-- <script src="js/catalog.js"></script> -->
@@ -97,7 +98,8 @@
     <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/spinner.js"></script>   
+    <script src="js/index.js"></script>  
 
 </body>
 </html>
