--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
     <section class="our_Products">
         <div id="shopping"></div>
+        <div id="spinner"></div>
         <span class="container"></span>
             <div class="our_Products-items">
 
@@ -285,7 +286,8 @@
     <script src="js/header.js"></script> 
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/spinner.js"></script>   
+    <script src="js/index.js"></script>  
 
 </body>
 </html>
