--- a/range.html
+++ b/range.html
@@ -41,6 +41,7 @@
             <div id="products"></div>
             <div id="shopping"></div>
             <div id="spinner"></div>
+            <div id="error"></div>
         </div>
     </section>
 
@@ -88,6 +89,7 @@
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
     <script src="js/spinner.js"></script>   
+    <script src="js/error.js"></script>  
     <script src="js/index.js"></script>    
 
 </body>
