update text + social icons

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
 
                         <h1>Украшения со смыслом</h1>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Perspiciatis, voluptatibus facilis similique animi assumenda asperiores.</p>
+                        <p>Украшение сделанные с душой и радостью для самых лучших девушек</p>
 
-                    <button class="btn_header" type="button">ПОСМОТРЕТЬ БОЛЬШЕ</button>
+                    <form action="range.html">
+                        <button class="btn_header" type="submit">ПОСМОТРЕТЬ БОЛЬШЕ</button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -183,7 +185,7 @@
             <div class="subscribe_col_right">
                 <div class="subscribe_col_block">
 
-                    <h1>Stay in touch</h1>
+                    <h1>Оставайся на связи</h1>
                     <p class="subscribe_text_big">Subscribe for our monthly roundup of great free resources and updates.</p>
                     <p class="subscribe_text_small">Excepturi fugiat a neque perspiciatis dicta, repudiandae dolorum. Corporis, accusantium, at! Numquam ad praesentium blanditiis, recusandae aliquam perferendis molestiae eaque </p>
 
@@ -205,37 +207,37 @@
 
                 <div class="partners_col">
 
-                   <h6 class="Partners_1_text">Partners_1</h6>
+                   <h6 class="Partners_1_text">Агат</h6>
 
                 </div>
 
                 <div class="partners_col">
 
-                    <h6 class="Partners_2_text">Partners_2</h6>
+                    <h6 class="Partners_2_text">Бирюза</h6>
 
                 </div>
 
                 <div class="partners_col">
 
-                    <h6 class="Partners_3_text">Partners_3</h6>
+                    <h6 class="Partners_3_text">Аметист</h6>
 
                 </div>
 
                 <div class="partners_col">
 
-                    <h6 class="Partners_4_text">Partners_4</h6>
+                    <h6 class="Partners_4_text">Малахит</h6>
 
                 </div>
 
                  <div class="partners_col">
 
-                    <h6 class="Partners_5_text">Partners_5</h6>
+                    <h6 class="Partners_5_text">Яшма</h6>
 
                 </div>
 
                 <div class="partners_col">
 
-                    <h6 class="Partners_6_text">Partners_6</h6>
+                    <h6 class="Partners_6_text">Оникс</h6>
 
                 </div>
 
@@ -252,11 +254,11 @@
             </div>
 
             <div class="footer_col">
-                <p class="footer_adress">Mese Selimovica, 52 <br> 78000, Banja Luka <br> BiH</p>
+                <p class="footer_adress"> Россия, Москва </p>
             </div>
 
             <div class="footer_col">
-                <p class="footer_adress">+387 065 252 552 <br> email@example.com</p>
+                <p class="footer_adress">+7 929 653 80 35 <br> bomkoar@gmail.com</p>
             </div>
 
             <div class="footer_col">
@@ -264,11 +266,11 @@
                 <div class="icons_social">
 
                     <div class="icon_social">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
+                        <img src="img/instagram.svg" alt="instagram" class="icon_social">
+                        <img src="img/facebook.png" alt="facebook" class="icon_social">
+                        <img src="img/twitter.png" alt="twitter" class="icon_social">
+                        <img src="img/vk.png" alt="vk" class="icon_social">                        
+                        
                     </div>
 
                 </div>
@@ -277,7 +279,7 @@
 
         </div>
 
-        <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
+        <div class="footer_copyright"><p>2021 © Бомко Алексей</p></div>
     </footer>
 
     <!-- <script src="js/catalog.js"></script> -->
