--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                         <h1>Украшения со смыслом</h1>
 
-                        <p>Украшение сделанные с душой и радостью для самых лучших девушек</p>
+                        <p>Украшения сделанные с душой и радостью для самых лучших девушек</p>
 
                     <form action="range.html">
                         <button class="btn_header" type="submit">ПОСМОТРЕТЬ БОЛЬШЕ</button>
