editing layout + sections

--- a/about_me.html
+++ b/about_me.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/diamond.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,700,700i|Open+Sans:300i,400,700,700i|Playfair+Display:400,700,700i&display=swap" rel="stylesheet">
-    <meta name="viewport" comtent="width=device-width, initial=scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -18,17 +18,21 @@
                         <h1><a class="nav__link-logo" href="index.html">Miss Bom Bom</a></h1>
                     </div>
 
+                    <div class="section-btn">
+                        <a href="#" class="menu-btn" id="navToggle">
+                            <span>
+                            </span>
+                        </a>
+                    </div>
+
                     <nav class="nav__top">
                         <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
                         <a class="nav__link" href="range.html">МАГАЗИН</a>
-                        <a class="nav__link" href="#">РАБОТЫ</a>
-                        <a class="nav__link" href="#">МОИ МЫСЛИ</a>
-                        <a class="nav__link" href="#">ДЕТАЛИ</a>
                         <a class="nav__link" id="header-basket" href="#"></a>
                     </nav>
 
                 </div>
-                </div>
+                
             </div>
         </div>
     </header> <!--/header-->
@@ -47,7 +51,7 @@
                 </div>
 
                 <div class="about_me-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, minus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, minus.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt harum eveniet magnam nemo veritatis alias natus, aliquid aliquam dicta sunt recusandae explicabo commodi unde laboriosam consequuntur quidem blanditiis sequi id cum libero non ducimus delectus voluptatum! Voluptate excepturi dignissimos a explicabo natus enim possimus tempore quae. Laudantium ex, modi nemo illo ducimus minus ratione odit omnis esse necessitatibus numquam dolores optio corrupti ab ea similique porro, iste voluptates officia velit. Sequi repellendus sed totam ut mollitia ipsam aperiam dolorum magnam, laudantium repellat, ipsum, in dicta dolorem enim molestiae consectetur eius explicabo minus at cupiditate odio aliquid beatae maiores iste. Debitis sed, vero laborum magnam perferendis repellat, corrupti harum soluta animi eligendi quibusdam? Veniam asperiores error consequuntur officia quidem dolores repellendus, dolore ipsa animi quo esse ea voluptas. Sunt officia similique ad impedit eaque obcaecati deserunt neque maxime! Cum a amet ipsum minima, facere atque. Recusandae similique numquam, suscipit animi adipisci quis error, aliquam possimus ex distinctio voluptatum asperiores. Enim explicabo voluptas, assumenda reprehenderit molestias quasi quod autem, soluta deleniti, ad omnis. Cumque eligendi mollitia molestiae fugiat atque quisquam quae, tempore quaerat, delectus obcaecati voluptates laborum eum minus placeat! Doloribus harum corporis deleniti vitae voluptatum pariatur quos doloremque ut velit voluptate?</p>
                 </div>
             </div>
             
@@ -62,24 +66,21 @@
             </div>
 
             <div class="footer_col">
-                <p class="footer_adress">Mese Selimovica, 52 <br> 78000, Banja Luka <br> BiH</p>
+                <p class="footer_adress"> Россия, Москва </p>
             </div>
 
             <div class="footer_col">
-                <p class="footer_adress">+387 065 252 552 <br> email@example.com</p>
+                <p class="footer_adress">+7 929 653 80 35 <br> bomkoar@gmail.com</p>
             </div>
 
             <div class="footer_col">
 
                 <div class="icons_social">
 
-                    <div class="icon_social">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                        <img src="https://via.placeholder.com/20" alt="facebook" class="facebook">
-                    </div>
+                        <img src="img/instagram.svg" alt="instagram" class="icon_social">
+                        <img src="img/facebook.png" alt="facebook" class="icon_social">
+                        <img src="img/twitter.png" alt="twitter" class="icon_social">
+                        <img src="img/vk.png" alt="vk" class="icon_social">        
 
                 </div>
 
@@ -87,7 +88,7 @@
 
         </div>
 
-        <div class="footer_copyright"><p>2016 © Nippy Studio. All rights reserved</p></div>
+        <div class="footer_copyright"><p>2021 © Бомко Алексей</p></div>
         <div id="shopping"></div>
         <div id="spinner"></div>
     </footer>
