--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                     <nav class="nav__top">
                         <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
                         <a class="nav__link" href="range.html">МАГАЗИН</a>
-                        <a class="nav__link" href="#">РАБОТЫ</a>
-                        <a class="nav__link" href="#">МОИ МЫСЛИ</a>
-                        <a class="nav__link" href="#">ДЕТАЛИ</a>
                         <a class="nav__link" id="header-basket" href="#"></a>
                     </nav>
 
@@ -94,7 +91,7 @@
                 </div>
 
                 <div class="our_Products-item">
-                    <h4>VIEW MORE --></h4>
+                    <h4>VIEW MORE</h4>
 
                     <div class="our_Products-item_right">
 
@@ -144,7 +141,6 @@
                 </div>
 
             </div>
-        </div>
     </section> <!--/our_Products-->
 
     <section class="statistics">
@@ -265,13 +261,10 @@
 
                 <div class="icons_social">
 
-                    <div class="icon_social">
                         <img src="img/instagram.svg" alt="instagram" class="icon_social">
                         <img src="img/facebook.png" alt="facebook" class="icon_social">
                         <img src="img/twitter.png" alt="twitter" class="icon_social">
-                        <img src="img/vk.png" alt="vk" class="icon_social">                        
-                        
-                    </div>
+                        <img src="img/vk.png" alt="vk" class="icon_social">
 
                 </div>
 
