--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/diamond.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,700,700i|Open+Sans:300i,400,700,700i|Playfair+Display:400,700,700i&display=swap" rel="stylesheet">
-    <meta name="viewport" comtent="width=device-width, initial=scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
