--- a/index.html
+++ b/index.html
@@ -18,18 +18,25 @@
                         <h1>Miss Bom Bom</h1>
                     </div>
 
-                    <div class="section-btn">
-                        <a href="#" class="menu-btn" id="navToggle">
-                            <span>
-                            </span>
-                        </a>
-                    </div>
+                    
 
-                    <nav class="nav__top">
-                        <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
-                        <a class="nav__link" href="range.html">МАГАЗИН</a>
-                        <a class="nav__link" id="header-basket" href="#"></a>
-                    </nav>
+                    <div class="nav__top">
+                        <nav class="nav__links">
+                            <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
+                            <a class="nav__link" href="range.html">МАГАЗИН</a>
+                        </nav>
+
+                        <div class="section-btn">
+                            <a href="#" class="menu-btn" id="navToggle">
+                                <span>
+                                </span>
+                            </a>
+                        </div>
+
+                        <div >
+                            <a class="nav__link" id="header-basket" href="#"></a>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="header__info">
