--- a/range.html
+++ b/range.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="img/diamond.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,700,700i|Open+Sans:300i,400,700,700i|Playfair+Display:400,700,700i&display=swap" rel="stylesheet">
-    <meta name="viewport" comtent="width=device-width, initial=scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 </head>
 
@@ -17,21 +17,28 @@
             <div class="header__intro">
                 <div class="header__top">
                     <div class="logo__top">
-                        <h1><a class="nav__link-logo" href="index.html">Miss Bom Bom</a></h1>
+                        <a href="index.html"><h1>Miss Bom Bom</h1></a>
                     </div>
 
-                    <div class="section-btn">
-                        <a href="#" class="menu-btn" id="navToggle">
-                            <span>
-                            </span>
-                        </a>
-                    </div>
+                    
 
-                    <nav class="nav__top">
-                        <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
-                        <a class="nav__link" href="#">МАГАЗИН</a>
-                        <a class="nav__link" id="header-basket" href="#"></a>
-                    </nav>
+                    <div class="nav__top">
+                        <nav class="nav__links">
+                            <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
+                            <a class="nav__link" href="range.html">МАГАЗИН</a>
+                        </nav>
+
+                        <div class="section-btn">
+                            <a href="#" class="menu-btn" id="navToggle">
+                                <span>
+                                </span>
+                            </a>
+                        </div>
+
+                        <div >
+                            <a class="nav__link" id="header-basket" href="#"></a>
+                        </div>
+                    </div>
 
                 </div>
                 </div>
