change padding header #2

--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
                             <a class="nav__link" href="range.html">МАГАЗИН</a>
                         </nav>
 
+                        
+                        <div class="header-basket">
+                            <a class="nav__link" id="header-basket" href="#"></a>
+                        </div>
+
                         <div class="section-btn">
                             <a href="#" class="menu-btn" id="navToggle">
                                 <span>
                                 </span>
                             </a>
                         </div>
-
-                        <div >
-                            <a class="nav__link" id="header-basket" href="#"></a>
-                        </div>
                     </div>
+
+                    
+
 
                 </div>
                 <div class="header__info">
