--- a/range.html
+++ b/range.html
@@ -23,22 +23,24 @@
                     
 
                     <div class="nav__top">
-                        <nav class="nav__links">
-                            <a class="nav__link" href="about_me.html">ОБО МНЕ</a>
-                            <a class="nav__link" href="range.html">МАГАЗИН</a>
+                        <nav class="nav__links" id="nav">
+                            <a class="nav__link nav__link_mobile" href="about_me.html">ОБО МНЕ</a>
+                            <a class="nav__link nav__link_mobile" href="range.html">МАГАЗИН</a>
                         </nav>
 
-                        <div class="section-btn">
-                            <a href="#" class="menu-btn" id="navToggle">
+                        
+                        <div class="header-basket">
+                            <a class="nav__link" id="header-basket" href="#"></a>
+                        </div>
+
+                        <div class="section-btn" type="button" id="navToggle">
+                            <a href="#" class="menu-btn">
                                 <span>
                                 </span>
                             </a>
                         </div>
-
-                        <div >
-                            <a class="nav__link" id="header-basket" href="#"></a>
-                        </div>
                     </div>
+
 
                 </div>
                 </div>
