upd burger menu range + about_me

--- a/about_me.html
+++ b/about_me.html
@@ -109,7 +109,8 @@
     <script src="js/shopping.js"></script>
     <script src="js/products.js"></script>
     <script src="js/spinner.js"></script>   
-    <script src="js/index.js"></script>  
+    <script src="js/index.js"></script>
+    <script src="js/menu.js"></script>  
 
 </body>
 </html>
