--- a/range.html
+++ b/range.html
@@ -8,11 +8,11 @@
     <link rel="icon" type="image/png" href="img/diamond.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300i,400,700,700i|Open+Sans:300i,400,700,700i|Playfair+Display:400,700,700i&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body>
-    <header class="header_about-me">
+    <header class="header_about-me header_about-me-range">
         <div class="container">
             <div class="header__intro">
                 <div class="header__top">
@@ -100,7 +100,8 @@
     <script src="js/products.js"></script>
     <script src="js/spinner.js"></script>   
     <script src="js/error.js"></script>  
-    <script src="js/index.js"></script>    
+    <script src="js/index.js"></script>
+    <script src="js/menu.js"></script>  
 
 </body>
 </html>
